--- a/alerter.conf
+++ b/alerter.conf
@@ -5,5 +5,6 @@
     "web_server_addr":":8080",
     "secret_key":"secret",
     "auth_client_login":"admin1",
-    "auth_client_password":"secret"
+    "auth_client_password":"secret",
+    "timeout_check" : 10
 }
